[tool.poetry]
name = "project3potentialtalents"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
pandas = "^2.0.0"
nltk = "^3.8.1"
pyxtension = "^1.14.5"
gensim = "^4.3.1"
scikit-learn = "^1.2.2"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
