[tool.poetry]
name = "project3potentialtalents"
version = "0.1.0"
description = ""
authors = ["Rubén Chuliá Mena <rubchume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.6.3"
pandas = "^2.0.0"
nltk = "^3.8.1"
pyxtension = "^1.14.5"
gensim = "^4.3.1"
scikit-learn = "^1.2.2"
plotly = "^5.14.1"
geopy = "^2.3.0"
ipywidgets = "^8.0.6"
jupyterlab-widgets = "^3.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
